# matrx-connect

./: .gitignore  README.md  pyproject.toml
_dev/: sample_schema.py
src/matrx_connect/: __init__.py
src/matrx_connect/api/: __init__.py  api_executor.py  endpoints.py  http_executor.py  http_stream_handler.py
src/matrx_connect/core/: task_queue.py
src/matrx_connect/exceptions/: __init__.py  socket_errors.py
src/matrx_connect/mcp/: server.py
src/matrx_connect/mcp/core/: definitions.py
src/matrx_connect/mcp/tools/: math.py
src/matrx_connect/mcp_server/: __init__.py
src/matrx_connect/mcp_server/core/: adapters.py  registry.py
src/matrx_connect/mcp_server/tools/: __init__.py  admin.py
src/matrx_connect/microservices/: __init__.py  client.py
src/matrx_connect/socket/: __init__.py  app.py
src/matrx_connect/socket/core/: __init__.py  app_factory.py  chrome_extension_events.py  global_socket_events.py  request_base.py  service_base.py  service_factory.py  user_sessions.py
src/matrx_connect/socket/response/: __init__.py  response_base.py  response_types.py  socket_emitter.py  socket_printer.py
src/matrx_connect/socket/schema/: __init__.py  schema_processor.py
src/matrx_connect/socket/schema/conversions/: conversion_functions.py  conversion_registry.py  conversions_system.py
src/matrx_connect/socket/schema/processing/: default_schema.py  schema.py  (+1 more)
src/matrx_connect/socket/services/: __init__.py  admin_service.py  initialize_handlers.py
src/matrx_connect/socket/utils/: get_schema.py  log_request.py
tests/: check_microservice_registry.py  main.py
(+3 files in other folders)
