[project]
name = "matrx-connect"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { email = "jatin.b.rx3@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "matrx-utils",
    "mcp[cli]>=1.11.0",
    "python-socketio",
    "supabase>=2.16.0",
    "matrx-utils @ git+https://github.com/armanisadeghi/matrx-utils.git@v1.0.0"
]

[project.scripts]
matrx-connect = "matrx_connect:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
